changes in view controller